--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,36 @@
 body {
   background-color: black;
-}
-
-h1 {
+  font-family: verdana;
+  text-align: center;
   color: white;
 }
 
-p {
+h1 {
+  font-weight: normal;
+  font-size: 50px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+.download {
+  color: aquamarine;
   font-size: 16px;
+}
+
+p {
+  color: grey;
+  font-size: 21px;
+}
+
+.phone {
+  margin-top: 20px;
+}
+
+.footer {
+  text-align: right;
+  color: gray;
 }
